# molprops

./: .gitignore  README.md  pyproject.toml  setup.py
molprops/: config.py
molprops/classyfire/: classyfire_wrapper.py
molprops/db_endpoints/: cas_ids.py  cmm.py  pubchem.py
molprops/exceptions/: cas_not_found.py  incorrect_mol.py
molprops/fingerprints_descriptors/: alvadesc_fingerprint_generator.py  converters.py  fingerprint_type.py  rdkit_fingerprint_generator.py
molprops/logP/: logP.py
molprops/molecular_file/: file_type.py  rdkit_molfile_writer.py  sdf_type.py
molprops/molfile_download/: molfile_downloader.py
molprops/molprops_cli/: cli_calls.txt  logp_cli.py  molprops_cli.py
tests/: test_alvadesc_fingerprints.py  test_cas_ids.py  test_classyfire.py  test_db_endpoints.py  test_logP.py  test_molfile_downloader.py  test_rdkit_fingerprints.py  test_rdkit_molfile_writer.py
